# rss_parser

./: .gitignore  README.md  abstracts.py  config.py  example.env  exceptions.py  json_logger.py  loggers.py  news_getter.py  pyproject.toml  rss_parser.py  start_parser.py  statistics.py  text_logger.py
getters/: __init__.py  news_getter.py
loggers/: __init__.py  json_logger.py  text_logger.py
