[tool.poetry]
name = "y"
version = "0.1.0"
description = ""
authors = ["Kamil Ayupov <ayupovkamil@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"
pydantic-settings = "^2.2.1"
ipython = "^8.22.2"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"
black = "^24.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
